--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -162,6 +162,24 @@
     <Compile Include="GUI\Forms\frmParkingCard.Designer.cs">
       <DependentUpon>frmParkingCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Forms\frmTicketPrice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmTicketPrice.Designer.cs">
+      <DependentUpon>frmTicketPrice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Forms\frmTicketTypePrice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmTicketTypePrice.Designer.cs">
+      <DependentUpon>frmTicketTypePrice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Forms\frmVehicleType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmVehicleType.Designer.cs">
+      <DependentUpon>frmVehicleType.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Forms\TestConnectDB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,11 +191,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\Pagination.cs" />
+    <EmbeddedResource Include="GUI\Forms\frmEmployee.resx">
+      <DependentUpon>frmEmployee.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmParkingCard.resx">
       <DependentUpon>frmParkingCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\frmVehicleType.resx">
+      <DependentUpon>frmVehicleType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\TestConnectDB.resx">
       <DependentUpon>TestConnectDB.cs</DependentUpon>
@@ -231,6 +255,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\142_1340441927_bSook.jpg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\newfile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\square.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\newfile24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\delete24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\save24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\search16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\search24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\refersh24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img\sign.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
