--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -142,6 +142,12 @@
     <Compile Include="DAL\Repositories\parkingAreaRepository.cs" />
     <Compile Include="DAL\Repositories\roleRepository.cs" />
     <Compile Include="DAL\Repositories\usersRepository.cs" />
+    <Compile Include="GUI\Forms\frmCreateUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmCreateUser.Designer.cs">
+      <DependentUpon>frmCreateUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Forms\frmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,12 +186,16 @@
     </Compile>
     <Compile Include="GUI\Program.cs" />
     <Compile Include="Models\allUserModel.cs" />
+    <Compile Include="Models\createUser.cs" />
     <Compile Include="Models\parkingAreaModel .cs" />
     <Compile Include="Models\roleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\Pagination.cs" />
     <Compile Include="Utils\ValidationUtils.cs" />
+    <EmbeddedResource Include="GUI\Forms\frmCreateUser.resx">
+      <DependentUpon>frmCreateUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmEmployee.resx">
       <DependentUpon>frmEmployee.cs</DependentUpon>
     </EmbeddedResource>
