--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -155,8 +155,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\parkingAreaBLL .cs" />
+    <Compile Include="BLL\roleBLL.cs" />
+    <Compile Include="BLL\userBLL.cs" />
     <Compile Include="DAL\Database\DatabaseProvider.cs" />
     <Compile Include="DAL\Repositories\parkingAreaRepository.cs" />
+    <Compile Include="DAL\Repositories\roleRepository.cs" />
+    <Compile Include="DAL\Repositories\usersRepository.cs" />
+    <Compile Include="GUI\Forms\frmCreateUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmCreateUser.Designer.cs">
+      <DependentUpon>frmCreateUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Forms\frmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,6 +197,12 @@
     <Compile Include="GUI\Forms\frmTicketPrice.Designer.cs">
       <DependentUpon>frmTicketPrice.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Forms\frmUsers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmUsers.Designer.cs">
+      <DependentUpon>frmUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Forms\frmVehicleType.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,10 +216,17 @@
       <DependentUpon>TestConnectDB.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Program.cs" />
+    <Compile Include="Models\allUserModel.cs" />
+    <Compile Include="Models\createUser.cs" />
     <Compile Include="Models\parkingAreaModel .cs" />
+    <Compile Include="Models\roleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\Pagination.cs" />
+    <Compile Include="Utils\ValidationUtils.cs" />
+    <EmbeddedResource Include="GUI\Forms\frmCreateUser.resx">
+      <DependentUpon>frmCreateUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmEmployee.resx">
       <DependentUpon>frmEmployee.cs</DependentUpon>
     </EmbeddedResource>
@@ -215,6 +238,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmTicketPrice.resx">
       <DependentUpon>frmTicketPrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\frmUsers.resx">
+      <DependentUpon>frmUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\frmVehicleType.aa.resx">
+      <DependentUpon>frmVehicleType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmVehicleType.resx">
       <DependentUpon>frmVehicleType.cs</DependentUpon>
