--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -140,6 +140,7 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -156,10 +157,12 @@
   <ItemGroup>
     <Compile Include="BLL\parkingAreaBLL .cs" />
     <Compile Include="BLL\roleBLL.cs" />
+    <Compile Include="BLL\TicketPriceBLL.cs" />
     <Compile Include="BLL\userBLL.cs" />
     <Compile Include="DAL\Database\DatabaseProvider.cs" />
     <Compile Include="DAL\Repositories\parkingAreaRepository.cs" />
     <Compile Include="DAL\Repositories\roleRepository.cs" />
+    <Compile Include="DAL\Repositories\TicketPriceRepository.cs" />
     <Compile Include="DAL\Repositories\usersRepository.cs" />
     <Compile Include="GUI\Forms\frmCreateUser.cs">
       <SubType>Form</SubType>
@@ -216,10 +219,13 @@
       <DependentUpon>TestConnectDB.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Program.cs" />
+    <Compile Include="Helpers\TicketPriceFormHelper.cs" />
     <Compile Include="Models\allUserModel.cs" />
     <Compile Include="Models\createUser.cs" />
     <Compile Include="Models\parkingAreaModel .cs" />
     <Compile Include="Models\roleModel.cs" />
+    <Compile Include="Models\TicketPrice.cs" />
+    <Compile Include="Models\VehicleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\Pagination.cs" />
