--- a/ParkingManagement/packages.config
+++ b/ParkingManagement/packages.config
@@ -13,6 +13,9 @@
   <package id="Krypton.Ribbon" version="90.25.2.55" targetFramework="net472" />
   <package id="Krypton.Toolkit" version="90.25.2.55" targetFramework="net472" />
   <package id="Krypton.Workspace" version="90.25.2.55" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
