--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -160,12 +160,14 @@
     <Compile Include="BLL\roleBLL.cs" />
     <Compile Include="BLL\TicketPriceBLL.cs" />
     <Compile Include="BLL\userBLL.cs" />
+    <Compile Include="BLL\vehicleBLL.cs" />
     <Compile Include="DAL\Database\DatabaseProvider.cs" />
     <Compile Include="DAL\Repositories\parkingAreaRepository.cs" />
     <Compile Include="DAL\Repositories\parkingSlotRepository.cs" />
     <Compile Include="DAL\Repositories\roleRepository.cs" />
     <Compile Include="DAL\Repositories\TicketPriceRepository.cs" />
     <Compile Include="DAL\Repositories\usersRepository.cs" />
+    <Compile Include="DAL\Repositories\vehicleRepository.cs" />
     <Compile Include="GUI\Forms\frmParkingSlot.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +179,12 @@
     </Compile>
     <Compile Include="GUI\Forms\frmSplash.Designer.cs">
       <DependentUpon>frmSplash.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Forms\frmVehicle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmVehicle.Designer.cs">
+      <DependentUpon>frmVehicle.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Forms\statistics\frmRevenueStatistics.cs">
       <SubType>Form</SubType>
@@ -266,11 +274,13 @@
     <Compile Include="Models\allParkingSlot.cs" />
     <Compile Include="Helpers\TicketPriceFormHelper.cs" />
     <Compile Include="Models\allUserModel.cs" />
+    <Compile Include="Models\allVehicle.cs" />
     <Compile Include="Models\createUser.cs" />
     <Compile Include="Models\parkingAreaModel .cs" />
     <Compile Include="Models\parkingSlotModel.cs" />
     <Compile Include="Models\roleModel.cs" />
     <Compile Include="Models\TicketPrice.cs" />
+    <Compile Include="Models\vehicleModel.cs" />
     <Compile Include="Models\VehicleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
@@ -302,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmUsers.resx">
       <DependentUpon>frmUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\frmVehicle.resx">
+      <DependentUpon>frmVehicle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmVehicleType.aa.resx">
       <DependentUpon>frmVehicleType.cs</DependentUpon>
