--- a/ParkingManagement/ParkingManagement.csproj
+++ b/ParkingManagement/ParkingManagement.csproj
@@ -150,6 +150,7 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -170,6 +171,7 @@
   <ItemGroup>
     <Compile Include="BLL\parkingAreaBLL .cs" />
     <Compile Include="BLL\parkingSlotBLL.cs" />
+    <Compile Include="BLL\PaymentReceiptBLL.cs" />
     <Compile Include="BLL\roleBLL.cs" />
     <Compile Include="BLL\StatisticsBLL.cs" />
     <Compile Include="BLL\userBLL.cs" />
@@ -178,6 +180,7 @@
     <Compile Include="DAL\Repositories\GetUserRoleStatistics.cs" />
     <Compile Include="DAL\Repositories\parkingAreaRepository.cs" />
     <Compile Include="DAL\Repositories\parkingSlotRepository.cs" />
+    <Compile Include="DAL\Repositories\PaymentReceiptDAL.cs" />
     <Compile Include="DAL\Repositories\roleRepository.cs" />
     <Compile Include="DAL\Repositories\TicketPriceRepository.cs" />
     <Compile Include="DAL\Repositories\usersRepository.cs" />
@@ -186,6 +189,12 @@
     </Compile>
     <Compile Include="GUI\Forms\frmParkingSlot.Designer.cs">
       <DependentUpon>frmParkingSlot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Forms\frmPaymentReceipt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\frmPaymentReceipt.Designer.cs">
+      <DependentUpon>frmPaymentReceipt.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Forms\frmSplash.cs">
       <SubType>Form</SubType>
@@ -247,6 +256,12 @@
     <Compile Include="GUI\Forms\frmVehicleType.Designer.cs">
       <DependentUpon>frmVehicleType.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Forms\statistics\StatisticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\statistics\StatisticsForm.Designer.cs">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Forms\TestConnectDB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -260,7 +275,9 @@
     <Compile Include="Models\createUser.cs" />
     <Compile Include="Models\parkingAreaModel .cs" />
     <Compile Include="Models\parkingSlotModel.cs" />
+    <Compile Include="Models\PaymentReceipt.cs" />
     <Compile Include="Models\roleModel.cs" />
+    <Compile Include="Models\TableAttribute.cs" />
     <Compile Include="Models\TicketPrice.cs" />
     <Compile Include="Models\VehicleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -285,6 +302,9 @@
     <EmbeddedResource Include="GUI\Forms\frmParkingSlot.resx">
       <DependentUpon>frmParkingSlot.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\frmPaymentReceipt.resx">
+      <DependentUpon>frmPaymentReceipt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmSplash.resx">
       <DependentUpon>frmSplash.cs</DependentUpon>
     </EmbeddedResource>
@@ -299,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\frmVehicleType.resx">
       <DependentUpon>frmVehicleType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Forms\statistics\StatisticsForm.resx">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Forms\TestConnectDB.resx">
       <DependentUpon>TestConnectDB.cs</DependentUpon>
