--- a/ParkingManagement/packages.config
+++ b/ParkingManagement/packages.config
@@ -4,6 +4,7 @@
   <package id="EPPlus" version="6.0.3" targetFramework="net472" />
   <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net472" />
   <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="6.6.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net472" />
   <package id="HarfBuzzSharp" version="7.3.0.3" targetFramework="net472" />
   <package id="HarfBuzzSharp.NativeAssets.Linux" version="7.3.0.3" targetFramework="net472" />
